user info correct form
